--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
   --fw-extrabold: 800;
 }
 
-/* === ## JOSH CAMEOU'S RESET === */
+/* === ## JOSH COMEAU'S RESET === */
 /* LINK: https://www.joshwcomeau.com/css/custom-css-reset/ */
 
 *,
